--- a/src/app/presentation/vs-code/vs-code.html
+++ b/src/app/presentation/vs-code/vs-code.html
@@ -56,14 +56,75 @@
         <hr class="ui-separator vertical">
     </aside>
 
+
+    
     <main class="vs-code-ui__file-visualizer">
         
+        <div class="vs-code-ui__file-visualizer__files-open">            
+            <div class="vs-code-ui__file-visualizer__files-open__file">
+                <hr class="ui-separator blue" />
+                <img alt="file type icon" src="/assets/vs-icons/code-solid-full.svg">
+                <span class="vs-code-ui__file-visualizer__files-open__file__title">presentation.html</span>
+                <img class="vs-code-ui__file-visualizer__files-open__file__close" src="/assets/vs-icons/close.svg" alt="Close window" />
+                <hr class="ui-separator vertical">
+            </div>            
+        </div>
+
+  
+
+        <div class="vs-code-ui__file-visualizer__file">
+            <hr class="ui-separator file "/>
+
+            <div class="vs-code-ui__file-visualizer__file__lines">
+                <ol>
+                    @for (line of Arr(lines); track $index) {
+                        <li>{{$index+1}}</li>
+                    }
+                </ol>
+            </div>
+
+            <div class="vs-code-ui__file-visualizer__file__content">
+                
+                
+            </div>
+
+        </div>
+        
+
     </main>
     
 
     
     <footer class="vs-code-ui__console">
         <hr class="ui-separator"/>
+        <div>
+            <ul>
+                <li>PROBLEMS</li>
+                <li>OUTPUT</li>
+                <li>DEBUG CONSOLE</li>
+                <!-- highligh this one -->
+                <li>TERMINAL</li>
+                <li>PORTS</li>
+            </ul>
+
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+
+        <div>
+            <p>D:\GithubRepos\Portfolio</p>
+        </div>
+
+        <div>
+
+        </div>
+        
     </footer>
     
 </div>
