--- a/src/app/presentation/vs-code/vs-code.css
+++ b/src/app/presentation/vs-code/vs-code.css
@@ -205,6 +205,7 @@ li {
 }
 
 
+
 /*  */
 
 
@@ -230,7 +231,7 @@ li {
     bottom: 0;
     left: 240px;
     width: 84.4%;
-    height: 240px;
+    height: 230px;
     background-color: #1f1f1f;
 }
 
@@ -244,9 +245,54 @@ li {
 .vs-code-ui__file-visualizer{
     position: absolute;
     left: 240px;
-    height: 630px;
+    height: 640px;
     width: 84.4%;
     background-color: #242424;
+}
+
+.vs-code-ui__file-visualizer__files-open{
+    background-color: #1f1f1f;
+    height: 40px;
+}
+
+.vs-code-ui__file-visualizer__files-open__file{
+    width: 17%;
+    height: 40px;
+    font-size: 15px;
+    color: #a8a8a8;
+    background: #242424;
+    position: absolute;
+    
+}
+
+.vs-code-ui__file-visualizer__files-open__file  hr+img{
+    width: 17px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.vs-code-ui__file-visualizer__files-open__file__title{
+    position: absolute;
+    left: 35px;
+    top: 5px;
+}
+
+.vs-code-ui__file-visualizer__files-open__file__close{
+    position: absolute;
+    right: 6px;
+    top: 7px;
+    width: 20px;
+}
+
+.vs-code-ui__file-visualizer__file__lines{
+    width: 3%;    
+    position: absolute;
+}
+
+.vs-code-ui__file-visualizer__file__lines li{
+    width: 50%;
+    text-align: right;        
 }
 
 /*  */
@@ -260,6 +306,12 @@ li {
     border: none;
 }
 
+.file{
+    width: 83%;
+    position: absolute;
+    right: 0;
+}
+
 .vertical{
     width: 1px;
     position: absolute;
@@ -268,3 +320,6 @@ li {
     height: 100%;    
 }
 
+.blue {
+    background-color: #4d7cff;
+}
