--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;    
 }
 
+li:hover{
+    cursor: pointer;
+}
+
 body{
     background-color: rgb(68, 60, 53);
     font-family: 'poppins', sans-serif;
