Divided vs-code component
Divided vs-code component into more little components so this way navigating on the CSS/HTML it's not a torture

Added highlight to left menu (file explorer icon)

Set input from top menu readonly

--- a/src/app/presentation/presentation.html
+++ b/src/app/presentation/presentation.html
@@ -8,6 +8,6 @@
             <p class="avatar-section__position">Full-Stack .NET Developer</p>
         </div>
     </div>    
-    <div app-social-networks></div>
-     <app-vs-code/>
+    <!-- <div app-social-networks></div> -->
+    <app-vs-code/>
 </header>
