--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,33 @@
     box-sizing: border-box;    
 }
 
+li {
+    display: inline-block;
+    margin-left: 8px;
+    color: rgb(192, 192, 192);
+    font-size: 14px;
+}
+
+.ui-separator {
+    height: 1px;
+    background-color: #474747;
+    border: none;
+}
+
+.file {
+    width: 83%;
+    position: absolute;
+    right: 0;
+}
+
+.vertical {
+    width: 1px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+}
+
 li:hover{
     cursor: pointer;
 }
