--- a/src/app/presentation/social-networks/social-networks.css
+++ b/src/app/presentation/social-networks/social-networks.css
@@ -1,7 +1,7 @@
 :host{
     position: absolute;
     z-index: 10;
-    right: 0;
+    right: 3px;
     top: 43%;
 }
 
@@ -28,49 +28,4 @@
 
 .social-networks__container__item img:hover{
     animation: resize-img 1.1s infinite alternate;
-}
-
-
-@keyframes resize-img {
-
-    10% {
-        transform: scale(1.04);
-    }
-
-    20% {
-        transform: scale(1.08);
-    }
-
-    30% {
-        transform: scale(1.12);
-    }
-
-    40% {
-        transform: scale(1.16);
-    }
-
-    50% {
-        transform: scale(1.2);
-    }
-
-    60% {
-        transform: scale(1.24);
-    }
-
-    70% {
-        transform: scale(1.28);
-    }
-
-    80% {
-        transform: scale(1.32);
-    }
-
-    90% {
-        transform: scale(1.36);
-    }
-
-    100% {
-        transform: scale(1.4);
-    }
-
 }
