--- a/src/app/presentation/hamburger-menu/hamburger-menu.css
+++ b/src/app/presentation/hamburger-menu/hamburger-menu.css
@@ -5,101 +5,134 @@
     top: 0;
     left: 0;
     position: fixed;
-    
-    animation: backdrop-fade 0.3s ease-in-out forwards;
+    animation: backdrop-fade 0.8s ease forwards;
 }
+
 
 .hamburger-menu {
     z-index: 100;
     position: absolute;
     width: 50%;
-    height: 50%;
-    top: 25%;
     left: 25%;
+    height: 100%;
     text-align: center;
 }
 
 .hamburger-menu__menu-options {
     padding: 8px;
+    width: 50%;
+    height: 100%;
+    left: 25%;
+    position: relative;
 }
 
 .hamburger-menu__menu-options__option {
     display: block;
+    top: 27%;
+    bottom: 27%;
+    position: relative;
     padding: 8px;
     font-size: 28px;
     cursor: default;
+    color: rgb(197, 197, 197);
     margin: 10px;
+    animation: text-appear 0.8s ease forwards;    
+}
+
+/* animations triggered once the hamburger menu is closed */
+.backdrop-fade-out-menu {
+    animation: backdrop-fade-out 0.8s ease forwards;
+}
+
+.option-text-disappear {    
+    animation: text-disappear 0.8s ease forwards;
 }
 
 .hamburger-menu__menu-options__option:hover {
-    animation: font-color-change 6s infinite alternate;
+    animation: font-color-change 3s infinite alternate;
+}
+
+.hamburger-menu__close-btn i {
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+}
+
+.hamburger-menu__close-btn i:hover {
+    animation: resize-img 1.6s infinite alternate;
+}
+
+.hamburger-menu__close-btn {
+    z-index: 100;
+    position: absolute;
+    right: 40px;
+    top: 15px;
+    background: none;
 }
 
 
 @keyframes font-color-change {
 
-    10% {
-        color: rgb(223, 176, 115);
+    from {
+        color: rgb(230, 183, 97);
     }
 
-    20% {
-        color: rgb(223, 156, 75);
-    }
-
-    30% {
-        color: rgb(223, 136, 55);
-    }
-
-    40% {
-        color: rgb(223, 116, 35);
-    }
-
-    50% {
-        color: rgb(223, 96, 15);
-    }
-
-    60% {
-        color: rgb(15, 81, 223);
-    }
-
-    70% {
-        color: rgb(35, 101, 223);
-    }
-
-    80% {
-        color: rgb(55, 121, 223);
-    }
-
-    90% {
-        color: rgb(75, 141, 223);
-    }
-
-    100% {
-        color: rgb(95, 161, 223);
+    to {
+        color: rgb(73, 119, 216);
     }
 
 }
 
 @keyframes backdrop-fade {
-    25% {
-        background: rgba(0, 0, 0,0.1);
-        backdrop-filter: blur(1px);
+
+    from {
+        background: rgba(0, 0, 0, 0);
+        backdrop-filter: blur(0);
     }
 
-    50% {
-        background: rgba(0, 0, 0, 0.2);
-        backdrop-filter: blur(2px);
+    to {
+        background: rgba(0, 0, 0, 0.4);
+        backdrop-filter: blur(4px);
     }
+    
+}
 
-    75% {
-        background: rgba(0, 0, 0, 0.3);
-        backdrop-filter: blur(3px);
-    }
+@keyframes backdrop-fade-out {
 
-    100% {
+    from {
         background: rgba(0, 0, 0, 0.4);
         backdrop-filter: blur(4px);
     }
 
-    
+    to {
+        background: rgba(0, 0, 0, 0);
+        backdrop-filter: blur(0);
+    }
+
+}
+
+
+@keyframes text-appear {
+
+    to {
+        color: rgba(197, 197, 197, 0.8);
+    }
+
+    from {
+        color: rgba(197, 197, 197, 0);
+    }
+
+}
+
+
+@keyframes text-disappear {
+
+    from {
+        color: rgba(197, 197, 197, 0.8);
+    }
+
+    to {
+        color: rgba(197, 197, 197, 0);
+    }
+
 }
