Starting the responsive design
Added new component to show the description

--- a/src/app/presentation/hamburger-menu/hamburger-menu.html
+++ b/src/app/presentation/hamburger-menu/hamburger-menu.html
@@ -2,11 +2,12 @@
 
 <div class="hamburger-menu" >
 
-    <ul class="hamburger-menu__menu-options">
-        <li class="hamburger-menu__menu-options__option" [class.option-text-disappear]="fadeOutMenu()">Menu Option 1</li>
-        <li class="hamburger-menu__menu-options__option" [class.option-text-disappear]="fadeOutMenu()">Menu Option 2</li>
-        <li class="hamburger-menu__menu-options__option" [class.option-text-disappear]="fadeOutMenu()">Menu Option 3</li>
-        <li class="hamburger-menu__menu-options__option" [class.option-text-disappear]="fadeOutMenu()">Menu Option 4</li>
+    <ul class="hamburger-menu__menu-options">        
+        <li class="hamburger-menu__menu-options__option" [class.option-text-disappear]="fadeOutMenu()">Education</li>
+        <li class="hamburger-menu__menu-options__option" [class.option-text-disappear]="fadeOutMenu()">Tech Stack</li>
+        <li class="hamburger-menu__menu-options__option" [class.option-text-disappear]="fadeOutMenu()">My Projects</li>        
+        <li class="hamburger-menu__menu-options__option" [class.option-text-disappear]="fadeOutMenu()">Certifications</li>
+        <li class="hamburger-menu__menu-options__option" [class.option-text-disappear]="fadeOutMenu()">Work Experience</li>
     </ul>
 
 </div>
