--- a/src/app/presentation/vs-code/vs-code.html
+++ b/src/app/presentation/vs-code/vs-code.html
@@ -1,8 +1,10 @@
 <div class="vs-code-ui">
     <app-top-menu/>
     <hr class="ui-separator"/>
-    <app-left-menu-bar/>
-    <app-left-menu-project-explorer/>
-    <app-file-visualizer/>
-    <app-terminal/>
+    <div class="vs-code-ui__main-content">
+        <app-left-menu-bar/>
+        <app-left-menu-project-explorer/>
+        <app-file-visualizer/>
+        <app-terminal/>
+    </div>
 </div>
