--- a/src/app/presentation/presentation.html
+++ b/src/app/presentation/presentation.html
@@ -1,5 +1,5 @@
 <header class="presentation">
-    
+
     <div class="avatar_section__hamburger">
         <button class="avatar_section__hamburger__btn" (click)="onOpenHamburgerMenu()">
             <img src="/assets/icons/hamburger-menu.svg" alt="Hamburger menu icon" />
@@ -7,18 +7,24 @@
     </div>
 
     @if (isHamburgerMenuOpen()) {
-        <app-hamburger-menu (hamburgerMenuClose)="onCloseHamburgerMenu()" />
+    <app-hamburger-menu (hamburgerMenuClose)="onCloseHamburgerMenu()" />
     }
 
-    <div class="avatar_section">   
+    <div class="avatar_section">
         <div class="avatar_section__wrapper">
+
             <div class="avatar_section__image">
                 <img alt="Profile avatar" src="/assets/new213.jpg">
             </div>
             <h1 class="avatar-section__title">Antonio Carrasco</h1>
             <p class="avatar-section__position">Full-Stack .NET Developer</p>
+
+
         </div>
-    </div>    
-    <div app-social-networks></div>
+    </div>
+    <!-- <div app-social-networks></div> -->
+
+    <app-notepad [width]="550" [height]="490" content="ssssssssssssssssss" />
+
     <app-vs-code />
 </header>
