--- a/src/app/presentation/vs-code/file-visualizer/file-visualizer.css
+++ b/src/app/presentation/vs-code/file-visualizer/file-visualizer.css
@@ -2,7 +2,7 @@
     position: absolute;
     left: 240px;
     height: 640px;
-    width: 84.4%;
+    width: calc(100% - 240px);
     background-color: #242424;
 }
 
@@ -81,4 +81,16 @@
 .vs-code-ui__file-visualizer__file-content tr> :not(td+td) {
     width: 50px;
     text-align: center;
+}
+
+@media (max-width: 1740px) {
+    .vs-code-ui__file-visualizer__files-open__file {
+        width: 19%;
+    }
+}
+
+@media (max-width: 1340px) {
+    .vs-code-ui__file-visualizer__files-open__file {
+        width: 21%;
+    }
 }
