--- a/src/app/presentation/vs-code/terminal/terminal.css
+++ b/src/app/presentation/vs-code/terminal/terminal.css
@@ -2,7 +2,7 @@
     position: absolute;
     bottom: 0;
     left: 240px;
-    width: 84.4%;
+    width: calc(100% - 240px);
     height: 230px;
     background-color: #1f1f1f;
 }
