--- a/src/app/presentation/vs-code/top-menu/top-menu.css
+++ b/src/app/presentation/vs-code/top-menu/top-menu.css
@@ -9,10 +9,11 @@
     height: 30px;
     background-color: #1f1f1f;
     padding: 4px;
+    width: 100%;
 }
 
 .vs-code-ui__navbar__menu {
-    width: 30%;
+    width: 30%;    
     position: absolute;
     top: 0;
     left: -8px;
@@ -130,4 +131,10 @@
 
 .vs-code-ui__navbar__window-options-close:hover {
     background-color: red;
+}
+
+@media (max-width: 1740px) {
+    .vs-code-ui__navbar__menu{
+        width: 33%;
+    }
 }
