--- a/src/app/presentation/vs-code/vs-code.css
+++ b/src/app/presentation/vs-code/vs-code.css
@@ -3,4 +3,17 @@
     height: 900px;
     position: relative;
 }
+.vs-code-ui__main-content{
+    width: 10%;    
+}
 
+@media (max-width: 1740px) {
+    .vs-code-ui {
+        width: 100%;
+        height: 900px;
+        margin-bottom: 40px;
+    }
+
+}
+
+@media (max-width: 1280px) { .vs-code-ui {display: none;} }
