--- a/src/app/presentation/presentation.html
+++ b/src/app/presentation/presentation.html
@@ -24,7 +24,11 @@
     </div>
     <!-- <div app-social-networks></div> -->
 
-    <app-notepad [width]="550" [height]="490" content="ssssssssssssssssss" />
+    <app-notepad filename="presentation.txt" [width]="60" [height]="40" [left]="40" [top]="480" content="Hello! My name is Antonio, I'm a software developer always eager to learn about new technologies as well as to grow both personally and professionally."/>    
+    <app-notepad filename="experience.txt" [width]="70" [height]="45" [left]="5" [top]="630" content="I have over two years of experience developing and maintaining a .NET Web Forms application with a microservices architecture for a well-known American publishing company.
 
+During that time, I've had the opportunity to mentor interns, develop new features, and maintain and debug code, among other tasks." />
+    <app-notepad filename="about-this.txt" [width]="70" [height]="35" [left]="30" [top]="920" content="On this page, I'll briefly introduce the personal projects I'm working on and the technologies I have experience with." />
+    
     <app-vs-code />
 </header>
