--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,9 @@
-<app-presentation/>
+<div app-animated-bg></div>
+<div class="blur">
+    <app-presentation />    
+    <app-education-list />
+    <app-tech-stack/>        
+    <app-personal-projects/>
+    <app-certifications/>
+    <app-work-experience/>
+</div>
