--- a/src/app/presentation/presentation.css
+++ b/src/app/presentation/presentation.css
@@ -5,23 +5,22 @@
 }
 
 .presentation {
-    height: 900px;
+    height: 930px;
     position: relative;
-    z-index: 1;
-    
+    z-index: 10;        
 }
 
 .avatar_section {
     width: 20%;
+    z-index: 10;    
     position: absolute;
     right: 0;
-    height: 500px;
-    padding: 10px;
+    height: 930px;
 }
 
 .avatar_section__hamburger {
     position: absolute;
-    z-index: 10;
+    z-index: 100;    
     right: 40px;
     top: 15px;
     width: 35px;
@@ -52,7 +51,7 @@
 }
 
 .avatar_section__image {
-    z-index: -10;
+    z-index: 10;
     width: 200px;
     margin-top: 40px;
     margin-left: 50px;
@@ -90,14 +89,16 @@
 }
 
 .avatar-section__title {
-    color: rgb(202, 152, 77);
+    color: rgb(235, 235, 235);
     margin: 15px 0 15px 0;
-    font-size: 30px;
+    font-size: 30px;    
+    font-weight: 100;
 }
 
 .avatar-section__position {
-    color: rgb(138, 138, 226);
-    font-size: 15px;
+    color: rgb(235, 235, 235);
+    font-size: 17px;    
+    
 }
 
 
@@ -113,11 +114,14 @@
 
 
 @media (max-width: 1740px) {
+
+    .presentation{
+        height: 1400px;
+    }
     .avatar_section {
         width: 100%;
         position: relative;
-        height: 500px;
-        padding: 10px;
+        height: 500px;        
     }
 
     .avatar_section__wrapper {
