Profile photo changed
Changed profile photo extension

--- a/src/app/presentation/presentation.html
+++ b/src/app/presentation/presentation.html
@@ -14,7 +14,7 @@
         <div class="avatar_section__wrapper">
 
             <div class="avatar_section__image">
-                <img alt="Profile avatar" src="/assets/profile.jpg">
+                <img alt="Profile avatar" src="/assets/profile.png">
             </div>
             <h1 class="avatar-section__title">Antonio Carrasco</h1>
             <p class="avatar-section__position">Full-Stack .NET Developer</p>
